added portfolio page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 					<img src="img/header__photo.jpg" alt="" class="header__photo">
 				</div>
 				<div class="download">
-					<a href="files/lytvynenko_portfolio_rus.pdf" class="button download__button" download>Download resume</a>
+					<a href="files/lytvynenko_portfolio_rus.pdf" class="button download__button" download>Download
+						resume</a>
 				</div>
 			</div>
 		</div>
@@ -75,9 +76,13 @@
 			<div class="about__wrapper">
 				<h3 class="about__title title wow fadeIn">About me</h3>
 				<div class="about__text-wrapper">
-					<p class="about__text wow fadeInLeft">Hi, I'm Denys – Frontend Developer from Kyiv.<br>I have serious passionate about UI effects, animations and creating intuitive, dynamic user experiences.</p>
-					<p class="about__text wow fadeInRight">All my life I have been driven by my strong belief that education is important. That's why I try to learn something new every single day.</p>
-					<p class="about__text wow fadeInLeft">I am inspired by creating great product with people who are as passionate as I am about building something awesome.</p>
+					<p class="about__text wow fadeInLeft">Hi, I'm Denys – Frontend Developer from Kyiv.<br>I have
+						serious passionate about UI effects, animations and creating intuitive, dynamic user
+						experiences.</p>
+					<p class="about__text wow fadeInRight">All my life I have been driven by my strong belief that
+						education is important. That's why I try to learn something new every single day.</p>
+					<p class="about__text wow fadeInLeft">I am inspired by creating great product with people who are as
+						passionate as I am about building something awesome.</p>
 				</div>
 			</div>
 		</div>
@@ -168,6 +173,14 @@
 			<div class="portfolio__wrapper">
 				<h3 class="portfolio__title title wow fadeIn">Portfolio</h3>
 				<div class="portfolio__item">
+					<a href="https://dmlytvynenko.github.io/vibo.github.io/" target="_blank">
+						<img src="img/vibo-landing-page.jpg" alt="" class="portfolio__demo wow fadeInUp"
+							data-wow-delay=".5s">
+					</a>
+					<a href="https://dmlytvynenko.github.io/vibo.github.io/" class="portfolio__link"
+						target="_blank">Vibo - Landing Page</a>
+				</div>
+				<div class="portfolio__item">
 					<a href="https://dmlytvynenko.github.io/oxygen.github.io/" target="_blank">
 						<img src="img/oxygen.jpg" alt="" class="portfolio__demo wow fadeInUp" data-wow-delay=".5s">
 					</a>
@@ -188,17 +201,23 @@
 		<div class="container">
 			<div class="contacts__wrapper">
 				<h3 class="contacts__title title wow fadeIn">Contacts</h3>
-				<span class="contacts__text wow fadeIn">Have a question or want to work together? Just send me a message!</span>
+				<span class="contacts__text wow fadeIn">Have a question or want to work together? Just send me a
+					message!</span>
 
 				<a href="#form" class="button contacts__btn wow bounceIn">Send message</a>
 
-				<form name="contact-form" accept-charset="utf-8" action="https://formspree.io/denys.m.lytvynenko@gmail.com" method="post" id="form" class="form white-popup-block mfp-hide">
+				<form name="contact-form" accept-charset="utf-8"
+					action="https://formspree.io/denys.m.lytvynenko@gmail.com" method="post" id="form"
+					class="form white-popup-block mfp-hide">
 					<label for="full-name" class="form__label">Full Name</label>
-					<input type="text" name="name" id="full-name" class="form__field" placeholder="First and Last" required="">
+					<input type="text" name="name" id="full-name" class="form__field" placeholder="First and Last"
+						required="">
 					<label for="email-address" class="form__label">Email Address</label>
-					<input type="email" name="_replyto" id="email-address" class="form__field" placeholder="example@email.com" required="">
+					<input type="email" name="_replyto" id="email-address" class="form__field"
+						placeholder="example@email.com" required="">
 					<label for="message" class="form__label">Message</label>
-					<textarea rows="5" name="message" id="message" class="form__message" placeholder="Your message..." required=""></textarea>
+					<textarea rows="5" name="message" id="message" class="form__message" placeholder="Your message..."
+						required=""></textarea>
 					<input type="hidden" name="_subject" id="email-subject" value="Portfolio form">
 					<input type="text" name="_gotcha" style="display: none;">
 					<input type="submit" class="button form__submit" value="Send message">
@@ -211,7 +230,8 @@
 								class="contacts__link contacts__link-linkedin wow tada" target="_blank"></a>
 						</li>
 						<li class="contacts__list-item">
-							<a href="https://github.com/dmlytvynenko" class="contacts__link contacts__link-github wow tada" target="_blank"></a>
+							<a href="https://github.com/dmlytvynenko"
+								class="contacts__link contacts__link-github wow tada" target="_blank"></a>
 						</li>
 						<li class="contacts__list-item">
 							<a href="https://www.facebook.com/profile.php?id=100015027280381"
