--- a/index_rus.html
+++ b/index_rus.html
@@ -65,7 +65,8 @@
 					<img src="img/header__photo.jpg" alt="" class="header__photo">
 				</div>
 				<div class="download">
-					<a href="files/lytvynenko_portfolio_rus.pdf" class="button download__button" download>Скачать резюме</a>
+					<a href="files/lytvynenko_portfolio_rus.pdf" class="button download__button" download>Скачать
+						резюме</a>
 				</div>
 			</div>
 		</div>
@@ -75,9 +76,13 @@
 			<div class="about__wrapper">
 				<h3 class="about__title title wow fadeIn">Обо мне</h3>
 				<div class="about__text-wrapper">
-					<p class="about__text wow fadeInLeft">Привет, я Денис - frontend разработчик из Киева.<br>Я серьезно увлечен эффектами пользовательского интерфейса, анимациией и созданием интуитивно понятных и динамичных пользовательских интерфейсов.</p>
-					<p class="about__text wow fadeInRight">Всю жизнь я руководствовался своей твердой верой в то, что образование важно. Поэтому я стараюсь узнавать что-то новое каждый день.</p>
-					<p class="about__text wow fadeInLeft">Я вдохновлен созданием отличных продуктов с людьми, которые так же увлечены созданием чего-то удивительного, как и я.</p>
+					<p class="about__text wow fadeInLeft">Привет, я Денис - frontend разработчик из Киева.<br>Я серьезно
+						увлечен эффектами пользовательского интерфейса, анимациией и созданием интуитивно понятных и
+						динамичных пользовательских интерфейсов.</p>
+					<p class="about__text wow fadeInRight">Всю жизнь я руководствовался своей твердой верой в то, что
+						образование важно. Поэтому я стараюсь узнавать что-то новое каждый день.</p>
+					<p class="about__text wow fadeInLeft">Я вдохновлен созданием отличных продуктов с людьми, которые
+						так же увлечены созданием чего-то удивительного, как и я.</p>
 				</div>
 			</div>
 		</div>
@@ -168,6 +173,14 @@
 			<div class="portfolio__wrapper">
 				<h3 class="portfolio__title title wow fadeIn">Портфолио</h3>
 				<div class="portfolio__item">
+					<a href="https://dmlytvynenko.github.io/vibo.github.io/" target="_blank">
+						<img src="img/vibo-landing-page.jpg" alt="" class="portfolio__demo wow fadeInUp"
+							data-wow-delay=".5s">
+					</a>
+					<a href="https://dmlytvynenko.github.io/vibo.github.io/" class="portfolio__link"
+						target="_blank">Vibo - Landing Page</a>
+				</div>
+				<div class="portfolio__item">
 					<a href="https://dmlytvynenko.github.io/oxygen.github.io/" target="_blank">
 						<img src="img/oxygen.jpg" alt="" class="portfolio__demo wow fadeInUp" data-wow-delay=".5s">
 					</a>
@@ -188,7 +201,8 @@
 		<div class="container">
 			<div class="contacts__wrapper">
 				<h3 class="contacts__title title wow fadeIn">Контакты</h3>
-				<span class="contacts__text contacts__text-rus wow fadeIn">У вас есть вопрос или вы хотите работать вместе? Просто отправьте мне сообщение!</span>
+				<span class="contacts__text contacts__text-rus wow fadeIn">У вас есть вопрос или вы хотите работать
+					вместе? Просто отправьте мне сообщение!</span>
 				<a href="#form" class="button button__rus contacts__btn wow bounceIn">Отправить сообщение</a>
 				<form name="contact-form" accept-charset="utf-8"
 					action="https://formspree.io/denys.m.lytvynenko@gmail.com" method="post" id="form"
@@ -213,8 +227,8 @@
 								class="contacts__link contacts__link-linkedin wow tada" target="_blank"></a>
 						</li>
 						<li class="contacts__list-item">
-							<a href="https://github.com/dmlytvynenko" class="contacts__link contacts__link-github wow tada"
-								target="_blank"></a>
+							<a href="https://github.com/dmlytvynenko"
+								class="contacts__link contacts__link-github wow tada" target="_blank"></a>
 						</li>
 						<li class="contacts__list-item">
 							<a href="https://www.facebook.com/profile.php?id=100015027280381"
