--- a/index_ukr.html
+++ b/index_ukr.html
@@ -65,7 +65,8 @@
 					<img src="img/header__photo.jpg" alt="" class="header__photo">
 				</div>
 				<div class="download">
-					<a href="files/lytvynenko_portfolio_ukr.pdf" class="button download__button-ukr" download>Завантажити резюме</a>
+					<a href="files/lytvynenko_portfolio_ukr.pdf" class="button download__button-ukr"
+						download>Завантажити резюме</a>
 				</div>
 			</div>
 		</div>
@@ -75,9 +76,13 @@
 			<div class="about__wrapper">
 				<h3 class="about__title title wow fadeIn">Про мене</h3>
 				<div class="about__text-wrapper">
-					<p class="about__text wow fadeInLeft">Привіт, я Денис - frontend розробник з Києва. <br> Я серйозно захоплений ефектами інтерфейсу користувача, анімацією і створенням інтуїтивно зрозумілих і динамічних інтерфейсів користувача.</p>
-					<p class="about__text wow fadeInRight">Все життя я керувався своєю твердою вірою в те, що освіта важлива. Тому я стараюся дізнаватися щось нове кожен день.</p>
-					<p class="about__text wow fadeInLeft">Я натхненний створенням відмінних продуктів з людьми, які так само захоплені створенням чогось дивовижного, як і я.</p>
+					<p class="about__text wow fadeInLeft">Привіт, я Денис - frontend розробник з Києва. <br> Я серйозно
+						захоплений ефектами інтерфейсу користувача, анімацією і створенням інтуїтивно зрозумілих і
+						динамічних інтерфейсів користувача.</p>
+					<p class="about__text wow fadeInRight">Все життя я керувався своєю твердою вірою в те, що освіта
+						важлива. Тому я стараюся дізнаватися щось нове кожен день.</p>
+					<p class="about__text wow fadeInLeft">Я натхненний створенням відмінних продуктів з людьми, які так
+						само захоплені створенням чогось дивовижного, як і я.</p>
 				</div>
 			</div>
 		</div>
@@ -168,6 +173,14 @@
 			<div class="portfolio__wrapper">
 				<h3 class="portfolio__title title wow fadeIn">Портфоліо</h3>
 				<div class="portfolio__item">
+					<a href="https://dmlytvynenko.github.io/vibo.github.io/" target="_blank">
+						<img src="img/vibo-landing-page.jpg" alt="" class="portfolio__demo wow fadeInUp"
+							data-wow-delay=".5s">
+					</a>
+					<a href="https://dmlytvynenko.github.io/vibo.github.io/" class="portfolio__link"
+						target="_blank">Vibo - Landing Page</a>
+				</div>
+				<div class="portfolio__item">
 					<a href="https://dmlytvynenko.github.io/oxygen.github.io/" target="_blank">
 						<img src="img/oxygen.jpg" alt="" class="portfolio__demo wow fadeInUp" data-wow-delay=".5s">
 					</a>
@@ -188,15 +201,21 @@
 		<div class="container">
 			<div class="contacts__wrapper">
 				<h3 class="contacts__title title wow fadeIn">Контакти</h3>
-				<span class="contacts__text contacts__text-ukr wow fadeIn">Маєте запитання чи хочете працювати разом? Просто надішліть мені повідомлення!</span>
+				<span class="contacts__text contacts__text-ukr wow fadeIn">Маєте запитання чи хочете працювати разом?
+					Просто надішліть мені повідомлення!</span>
 				<a href="#form" class="button button__ukr contacts__btn wow bounceIn">Надіслати повідомлення</a>
-				<form name="contact-form" accept-charset="utf-8" action="https://formspree.io/denys.m.lytvynenko@gmail.com" method="post" id="form" class="form white-popup-block mfp-hide">
+				<form name="contact-form" accept-charset="utf-8"
+					action="https://formspree.io/denys.m.lytvynenko@gmail.com" method="post" id="form"
+					class="form white-popup-block mfp-hide">
 					<label for="full-name" class="form__label">Повне Ім'я</label>
-					<input type="text" name="name" id="full-name" class="form__field" placeholder="Ім'я Фамілія" required="">
+					<input type="text" name="name" id="full-name" class="form__field" placeholder="Ім'я Фамілія"
+						required="">
 					<label for="email-address" class="form__label">Email Адреса</label>
-					<input type="email" name="_replyto" id="email-address" class="form__field" placeholder="example@email.com" required="">
+					<input type="email" name="_replyto" id="email-address" class="form__field"
+						placeholder="example@email.com" required="">
 					<label for="message" class="form__label">Повідомлення</label>
-					<textarea rows="5" name="message" id="message" class="form__message" placeholder="Ваше повідомлення..." required=""></textarea>
+					<textarea rows="5" name="message" id="message" class="form__message"
+						placeholder="Ваше повідомлення..." required=""></textarea>
 					<input type="hidden" name="_subject" id="email-subject" value="Форма портфоліо">
 					<input type="text" name="_gotcha" style="display: none;">
 					<input type="submit" class="button button__ukr form__submit" value="Надіслати повідомлення">
@@ -208,8 +227,8 @@
 								class="contacts__link contacts__link-linkedin wow tada" target="_blank"></a>
 						</li>
 						<li class="contacts__list-item">
-							<a href="https://github.com/dmlytvynenko" class="contacts__link contacts__link-github wow tada"
-								target="_blank"></a>
+							<a href="https://github.com/dmlytvynenko"
+								class="contacts__link contacts__link-github wow tada" target="_blank"></a>
 						</li>
 						<li class="contacts__list-item">
 							<a href="https://www.facebook.com/profile.php?id=100015027280381"
