--- a/index_ukr.html
+++ b/index_ukr.html
@@ -181,6 +181,14 @@
 						target="_blank">Vibo - Landing Page</a>
 				</div>
 				<div class="portfolio__item">
+					<a href="https://dmlytvynenko.github.io/vibo.github.io/" target="_blank">
+						<img src="img/minimo.jpg" alt="" class="portfolio__demo wow fadeInUp"
+							data-wow-delay=".5s">
+					</a>
+					<a href="https://dmlytvynenko.github.io/minimo.github.io/" class="portfolio__link"
+						target="_blank">Mimino - Landing Page (Bootstrap 4)</a>
+				</div>
+				<div class="portfolio__item">
 					<a href="https://dmlytvynenko.github.io/oxygen.github.io/" target="_blank">
 						<img src="img/oxygen.jpg" alt="" class="portfolio__demo wow fadeInUp" data-wow-delay=".5s">
 					</a>
