--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 						target="_blank">Vibo - Landing Page</a>
 				</div>
 				<div class="portfolio__item">
-					<a href="https://dmlytvynenko.github.io/vibo.github.io/" target="_blank">
+					<a href="https://dmlytvynenko.github.io/minimo.github.io/" target="_blank">
 						<img src="img/minimo.jpg" alt="" class="portfolio__demo wow fadeInUp"
 							data-wow-delay=".5s">
 					</a>
