Delete russian version of the site. Add new technologies. Add new CV. Add .gitignore file.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
 						<div class="language__english">
 							<a href="index.html" class="language__link language__link--active">ENG</a>
 						</div>
-						<div class="language__russian">
-							<a href="index_rus.html" class="language__link">RUS</a>
-						</div>
 						<div class="language__ukrainian">
 							<a href="index_ukr.html" class="language__link">UKR</a>
 						</div>
@@ -58,14 +55,14 @@
 					</div>
 					<div class="header__info wow fadeIn">
 						<span class="header__position">Frontend Developer</span>
-						<span class="header__age">23 years old, Kyiv</span>
+						<span class="header__age" id="header__age">years old, Kyiv</span>
 					</div>
 				</div>
 				<div class="header__image wow fadeIn">
 					<img src="img/header__photo.jpg" alt="" class="header__photo">
 				</div>
 				<div class="download">
-					<a href="files/lytvynenko_portfolio_rus.pdf" class="button download__button" download>Download
+					<a href="files/Denys_Lytvynenko.pdf" class="button download__button" download>Download
 						resume</a>
 				</div>
 			</div>
@@ -91,33 +88,40 @@
 		<div class="container">
 			<div class="skills__wrapper">
 				<h3 class="skills__title title wow fadeIn">Skills</h3>
-				<div class="skills__programs">
-					<h4 class="skills__programs-title wow fadeInUp">I use such tools as</h4>
-					<div class="skills__programs-items">
-						<div class="skills__programs-item wow fadeInUp" data-wow-delay=".2s">
-							<img src="img/icons/vscode.svg" alt="" class="skills__programs-logo">
-							<span class="skills__programs-name">Visual Studio Code</span>
-						</div>
-						<div class="skills__programs-item wow fadeInUp" data-wow-delay=".3s">
-							<img src="img/icons/sublimetext.svg" alt="" class="skills__programs-logo">
-							<span class="skills__programs-name">Sublime Text 3</span>
-						</div>
-						<div class="skills__programs-item wow fadeInUp" data-wow-delay=".4s">
-							<img src="img/icons/figma.svg" alt="" class="skills__programs-logo">
-							<span class="skills__programs-name">Figma</span>
-						</div>
-						<div class="skills__programs-item wow fadeInUp" data-wow-delay=".5s">
-							<img src="img/icons/photoshop.svg" alt="" class="skills__programs-logo">
-							<span class="skills__programs-name">Adobe Photoshop</span>
-						</div>
-					</div>
-				</div>
 				<div class="skills__soft">
-					<h4 class="skills__soft-title wow fadeInUp">I work with such technologies as</h4>
+					<h4 class="skills__soft-title wow fadeInUp">I work with</h4>
 					<div class="skills__soft-items slick">
 						<div class="skills__soft-item">
+							<img src="img/icons/react.svg" alt="" class="skills__soft-logo">
+							<span class="skills__soft-name">React.js</span>
+						</div>
+						<div class="skills__soft-item">
+							<img src="img/icons/redux.svg" alt="" class="skills__soft-logo">
+							<span class="skills__soft-name">Redux</span>
+						</div>
+						<div class="skills__soft-item">
+							<img src="img/icons/typescript.svg" alt="" class="skills__soft-logo">
+							<span class="skills__soft-name">TypeScript</span>
+						</div>
+						<div class="skills__soft-item">
+							<img src="img/icons/javascript.svg" alt="" class="skills__soft-logo">
+							<span class="skills__soft-name">JavaScript</span>
+						</div>
+						<div class="skills__soft-item">
+							<img src="img/icons/webpack.svg" alt="" class="skills__soft-logo">
+							<span class="skills__soft-name">Webpack</span>
+						</div>
+						<div class="skills__soft-item">
+							<img src="img/icons/graphql.svg" alt="" class="skills__soft-logo">
+							<span class="skills__soft-name">GraphQL</span>
+						</div>
+						<div class="skills__soft-item">
+							<img src="img/icons/git.svg" alt="" class="skills__soft-logo">
+							<span class="skills__soft-name">Git</span>
+						</div>
+						<div class="skills__soft-item">
 							<img src="img/icons/html.svg" alt="" class="skills__soft-logo">
-							<span class="skills__soft-name">HTML 5</span>
+							<span class="skills__soft-name">HTML</span>
 						</div>
 						<div class="skills__soft-item">
 							<img src="img/icons/css.svg" alt="" class="skills__soft-logo">
@@ -128,36 +132,16 @@
 							<span class="skills__soft-name">SASS</span>
 						</div>
 						<div class="skills__soft-item">
-							<img src="img/icons/javascript.svg" alt="" class="skills__soft-logo">
-							<span class="skills__soft-name">JavaScript</span>
+							<img src="img/icons/stylus.svg" alt="" class="skills__soft-logo">
+							<span class="skills__soft-name">Stylus</span>
 						</div>
 						<div class="skills__soft-item">
 							<img src="img/icons/bootstrap.svg" alt="" class="skills__soft-logo">
 							<span class="skills__soft-name">Bootsptap</span>
 						</div>
 						<div class="skills__soft-item">
-							<img src="img/icons/jquery.svg" alt="" class="skills__soft-logo">
-							<span class="skills__soft-name">jQuery</span>
-						</div>
-						<div class="skills__soft-item">
-							<img src="img/icons/gulp.svg" alt="" class="skills__soft-logo">
-							<span class="skills__soft-name">GULP</span>
-						</div>
-						<div class="skills__soft-item">
 							<img src="img/icons/bem.svg" alt="" class="skills__soft-logo">
-							<span class="skills__soft-name">BEM</span>
-						</div>
-						<div class="skills__soft-item">
-							<img src="img/icons/npm.svg" alt="" class="skills__soft-logo">
-							<span class="skills__soft-name">NPM</span>
-						</div>
-						<div class="skills__soft-item">
-							<img src="img/icons/git.svg" alt="" class="skills__soft-logo">
-							<span class="skills__soft-name">Git</span>
-						</div>
-						<div class="skills__soft-item">
-							<img src="img/icons/github.svg" alt="" class="skills__soft-logo">
-							<span class="skills__soft-name">GitHub</span>
+							<span class="skills__soft-name">БЕМ</span>
 						</div>
 					</div>
 					<ul class="nav">
@@ -173,33 +157,32 @@
 			<div class="portfolio__wrapper">
 				<h3 class="portfolio__title title wow fadeIn">Portfolio</h3>
 				<div class="portfolio__item">
-					<a href="https://dmlytvynenko.github.io/vibo.github.io/" target="_blank">
+					<a href="https://denysmlytvynenko.github.io/vibo.github.io/" target="_blank">
 						<img src="img/vibo-landing-page.jpg" alt="" class="portfolio__demo wow fadeInUp"
 							data-wow-delay=".5s">
 					</a>
-					<a href="https://dmlytvynenko.github.io/vibo.github.io/" class="portfolio__link"
+					<a href="https://denysmlytvynenko.github.io/vibo.github.io/" class="portfolio__link"
 						target="_blank">Vibo - Landing Page</a>
 				</div>
 				<div class="portfolio__item">
-					<a href="https://dmlytvynenko.github.io/minimo.github.io/" target="_blank">
-						<img src="img/minimo.jpg" alt="" class="portfolio__demo wow fadeInUp"
-							data-wow-delay=".5s">
+					<a href="https://denysmlytvynenko.github.io/minimo.github.io/" target="_blank">
+						<img src="img/minimo.jpg" alt="" class="portfolio__demo wow fadeInUp" data-wow-delay=".5s">
 					</a>
-					<a href="https://dmlytvynenko.github.io/minimo.github.io/" class="portfolio__link"
+					<a href="https://denysmlytvynenko.github.io/minimo.github.io/" class="portfolio__link"
 						target="_blank">Mimino - Landing Page (Bootstrap 4)</a>
 				</div>
 				<div class="portfolio__item">
-					<a href="https://dmlytvynenko.github.io/oxygen.github.io/" target="_blank">
+					<a href="https://denysmlytvynenko.github.io/oxygen.github.io/" target="_blank">
 						<img src="img/oxygen.jpg" alt="" class="portfolio__demo wow fadeInUp" data-wow-delay=".5s">
 					</a>
-					<a href="https://dmlytvynenko.github.io/oxygen.github.io/" class="portfolio__link"
+					<a href="https://denysmlytvynenko.github.io/oxygen.github.io/" class="portfolio__link"
 						target="_blank">Oxygen - Landing Page</a>
 				</div>
 				<div class="portfolio__item">
-					<a href="https://dmlytvynenko.github.io/golden-one.github.io/" target="_blank">
+					<a href="https://denysmlytvynenko.github.io/golden-one.github.io/" target="_blank">
 						<img src="img/golden-one.jpg" alt="" class="portfolio__demo wow fadeInUp" data-wow-delay=".5s">
 					</a>
-					<a href="https://dmlytvynenko.github.io/golden-one.github.io/" class="portfolio__link"
+					<a href="https://denysmlytvynenko.github.io/golden-one.github.io/" class="portfolio__link"
 						target="_blank">Golden one - Landing Page</a>
 				</div>
 			</div>
