Remove facebook from contact section.

--- a/index.html
+++ b/index.html
@@ -224,13 +224,10 @@
 							<a href="https://github.com/dmlytvynenko"
 								class="contacts__link contacts__link-github wow tada" target="_blank"></a>
 						</li>
-						<li class="contacts__list-item">
-							<a href="https://www.facebook.com/profile.php?id=100015027280381"
-								class="contacts__link contacts__link-facebook wow tada" target="_blank"></a>
-						</li>
 					</ul>
 				</div>
-				<div class="contacts__contact-me">Link with me on <br> LinkedIn, Github, Facebook</div>
+
+				<div class="contacts__contact-me">Link with me on <br> LinkedIn, Github</div>
 			</div>
 		</div>
 	</section>
