--- a/index_ukr.html
+++ b/index_ukr.html
@@ -221,13 +221,9 @@
 							<a href="https://github.com/dmlytvynenko"
 								class="contacts__link contacts__link-github wow tada" target="_blank"></a>
 						</li>
-						<li class="contacts__list-item">
-							<a href="https://www.facebook.com/profile.php?id=100015027280381"
-								class="contacts__link contacts__link-facebook wow tada" target="_blank"></a>
-						</li>
 					</ul>
 				</div>
-				<div class="contacts__contact-me">Зв'яжіться зі мною на<br>LinkedIn, Github, Facebook</div>
+				<div class="contacts__contact-me">Зв'яжіться зі мною на<br>LinkedIn, Github</div>
 			</div>
 		</div>
 	</section>
