--- a/index_ukr.html
+++ b/index_ukr.html
@@ -192,23 +192,30 @@
 		<div class="container">
 			<div class="contacts__wrapper">
 				<h3 class="contacts__title title wow fadeIn">Контакти</h3>
+
 				<span class="contacts__text contacts__text-ukr wow fadeIn">Маєте запитання чи хочете працювати разом?
 					Просто надішліть мені повідомлення!</span>
 				<a href="#form" class="button button__ukr contacts__btn wow bounceIn">Надіслати повідомлення</a>
-				<form name="contact-form" accept-charset="utf-8"
-					action="https://formspree.io/denys.m.lytvynenko@gmail.com" method="post" id="form"
-					class="form white-popup-block mfp-hide">
+
+				<form name="contact-form" accept-charset="utf-8" action="https://formspree.io/f/xdojrplz" method="post"
+					id="form" class="form white-popup-block mfp-hide">
+
 					<label for="full-name" class="form__label">Повне Ім'я</label>
 					<input type="text" name="name" id="full-name" class="form__field" placeholder="Ім'я Фамілія"
-						required="">
+						required>
+
 					<label for="email-address" class="form__label">Email Адреса</label>
-					<input type="email" name="_replyto" id="email-address" class="form__field"
-						placeholder="example@email.com" required="">
+					<input type="email" name="email" id="email-address" class="form__field"
+						placeholder="example@email.com" required>
+
 					<label for="message" class="form__label">Повідомлення</label>
 					<textarea rows="5" name="message" id="message" class="form__message"
-						placeholder="Ваше повідомлення..." required=""></textarea>
+						placeholder="Ваше повідомлення..." required></textarea>
+
 					<input type="hidden" name="_subject" id="email-subject" value="Форма портфоліо">
+
 					<input type="text" name="_gotcha" style="display: none;">
+
 					<input type="submit" class="button button__ukr form__submit" value="Надіслати повідомлення">
 				</form>
 				<div class="contacts__social">
